--- a/index.html
+++ b/index.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <title>Analytics</title>
-  </head>
-  <body></body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/css/style.css" />
+		<title>Analytics</title>
+	</head>
+	<body class="container">
+		<section class="intro-analytics">
+			<div class="wrap">
+				<header class="header">
+					<a href="#" class="header__logo">
+						<img src="/assets/icons/logo.svg" alt="" />
+						<p>Analytics</p>
+					</a>
+					<nav class="header__menu">
+						<ul class="header__menu-list">
+							<li class="header__menu-item"><a href="#">Products</a></li>
+							<li class="header__menu-item"><a href="#">Pricing</a></li>
+							<li class="header__menu-item"><a href="#">FAQ</a></li>
+							<li class="header__menu-item"><a href="#">Blog</a></li>
+							<li class="header__menu-item"><a href="#">Blog</a></li>
+						</ul>
+					</nav>
+					<div class="header__btns">
+						<button class="header__btn--transparent">Sign in</button>
+						<button class="header__btn--circled">Sign up</button>
+					</div>
+				</header>
+
+				<div class="dashboard">
+					<div class="dashboard__info">
+						<h1 class="dashboard__title">
+							Monitor your business on real-time dashboard
+						</h1>
+						<p class="dashboard__text">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum
+							nisi aliquet volutpat pellentesque volutpat est. Sapien in etiam
+							vitae nibh nunc mattis imperdiet sed nullam.
+						</p>
+						<button class="dashboard__btn">Try for free</button>
+					</div>
+
+					<div class="dashboard__pictures">
+						<img src="/assets/img/dashboard-small.png" alt="dashboard" />
+					</div>
+				</div>
+			</div>
+		</section>
+	</body>
 </html>
