--- a/index.html
+++ b/index.html
@@ -48,5 +48,102 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="main-futures wrap">
+			<h2 class="main-futures__title">Main Features</h2>
+			<p class="main-futures__text">
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum nisi
+				aliquet volutpat pellentesque volutpat est. Sapien in etiam vitae nibh
+				nunc mattis imperdiet sed nullam. Vitae et, tortor pulvinar risus
+				pulvinar sit amet. Id vel in nam malesuada.
+			</p>
+			<div class="main-futures__advantages">
+				<div class="main-futures__advantage-item">
+					<img
+						class="main-futures__advantage-icon"
+						src="/assets/icons/monitoring.svg"
+						alt="monitoring"
+					/>
+					<h3 class="main-futures__advantage-title">Monitoring 24/7</h3>
+					<p class="main-futures__advantage-desc">
+						Lorem ipsum dolor sit amet, consectetur adipis cing elit. Elementum
+						nisi aliquet volutpat.
+					</p>
+				</div>
+				<div class="main-futures__advantage-item">
+					<img
+						class="main-futures__advantage-icon"
+						src="/assets/icons/widgets.svg"
+						alt="monitoring"
+					/>
+					<h3 class="main-futures__advantage-title">Widget System</h3>
+					<p class="main-futures__advantage-desc">
+						Sapien in etiam vitae nibh nunc mattis imperdiet sed nullam. Vitae
+						et, tortor pulvinar risus pulvinar.
+					</p>
+				</div>
+				<div class="main-futures__advantage-item">
+					<img
+						class="main-futures__advantage-icon"
+						src="/assets/icons/performance.svg"
+						alt="monitoring"
+					/>
+					<h3 class="main-futures__advantage-title">Best Performance</h3>
+					<p class="main-futures__advantage-desc">
+						Lorem ipsum dolor sit amet, consectetur adipis cing elit. Elementum
+						nisi aliquet volutpat.
+					</p>
+				</div>
+			</div>
+		</section>
+
+		<section class="roadmap wrap">
+			<div class="roadmap__item">
+				<div class="roadmap__description">
+					<h3 class="roadmap__title">Automated Reports & Widget Alerts</h3>
+					<p class="roadmap__text">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum
+						nisi aliquet volutpat pellentesque volutpat est. Sapien in etiam
+						vitae nibh nunc mattis imperdiet sed nullam. Vitae et, tortor
+						pulvinar risus pulvinar sit amet.
+					</p>
+				</div>
+				<div class="roadmap__picture">
+					<img src="/assets/img/screen-01.png" alt="" />
+				</div>
+			</div>
+
+			<div class="roadmap__item roadmap__item--right">
+				<div class="roadmap__picture">
+					<img src="/assets/img/screen-02.png" alt="" />
+				</div>
+				<div class="roadmap__description">
+					<h3 class="roadmap__title">
+						Fully customizable to address your needs
+					</h3>
+					<p class="roadmap__text">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum
+						nisi aliquet volutpat pellentesque volutpat est. Sapien in etiam
+						vitae nibh nunc mattis imperdiet sed nullam. Vitae et, tortor
+						pulvinar risus pulvinar sit amet.
+					</p>
+				</div>
+			</div>
+
+			<div class="roadmap__item">
+				<div class="roadmap__description">
+					<h3 class="roadmap__title">Pre-built Dashboard Templates</h3>
+					<p class="roadmap__text">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum
+						nisi aliquet volutpat pellentesque volutpat est. Sapien in etiam
+						vitae nibh nunc mattis imperdiet sed nullam. Vitae et, tortor
+						pulvinar risus pulvinar sit amet.
+					</p>
+				</div>
+				<div class="roadmap__picture">
+					<img src="/assets/img/screen-03.png" alt="" />
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
