--- a/index.html
+++ b/index.html
@@ -114,9 +114,6 @@
 			</div>
 
 			<div class="roadmap__item roadmap__item--right">
-				<div class="roadmap__picture">
-					<img src="/assets/img/screen-02.png" alt="" />
-				</div>
 				<div class="roadmap__description">
 					<h3 class="roadmap__title">
 						Fully customizable to address your needs
@@ -127,6 +124,9 @@
 						vitae nibh nunc mattis imperdiet sed nullam. Vitae et, tortor
 						pulvinar risus pulvinar sit amet.
 					</p>
+				</div>
+				<div class="roadmap__picture">
+					<img src="/assets/img/screen-02.png" alt="" />
 				</div>
 			</div>
 
@@ -145,5 +145,98 @@
 				</div>
 			</div>
 		</section>
+
+		<!-- Четвертый блок  -->
+		<section class="pricing-plans">
+			<div class="wrap">
+				<div class="pricing-plans__description">
+					<h3 class="pricing-plans__title">Pricing Plans</h3>
+					<p class="pricing-plans__text">
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Elementum
+						nisi aliquet volutpat pellentesque volutpat est.
+					</p>
+				</div>
+				<div class="pricing-plans__rates">
+					<div class="rates-item">
+						<h4 class="rates-item__title">Starter</h4>
+						<p class="rates-item__text-block">up to 3 users</p>
+						<p class="rates-item__price">
+							<span class="rates-item__currency">$</span>29
+						</p>
+						<p class="rates-item__subtitle">per month</p>
+						<button class="rates-item__order-btn">Order</button>
+					</div>
+
+					<div class="rates-item rates-item--pink">
+						<h4 class="rates-item__title">Starter</h4>
+						<p class="rates-item__text-block">up to 3 users</p>
+						<p class="rates-item__price">
+							<span class="rates-item__currency">$</span>29
+						</p>
+						<p class="rates-item__subtitle">per month</p>
+						<button class="rates-item__order-btn">Order</button>
+					</div>
+
+					<div class="rates-item">
+						<h4 class="rates-item__title">Starter</h4>
+						<p class="rates-item__text-block">up to 3 users</p>
+						<p class="rates-item__price">
+							<span class="rates-item__currency">$</span>29
+						</p>
+						<p class="rates-item__subtitle">per month</p>
+						<button class="rates-item__order-btn">Order</button>
+					</div>
+				</div>
+			</div>
+		</section>
+
+		<footer class="footer-menu">
+			<div class="footer-menu__wrapper wrap">
+				<div class="footer-menu__logo">
+					<img src="./assets/icons/logo-gray.svg" alt="logo" />
+					<p>Analytics</p>
+				</div>
+				<ul class="footer-menu__list">
+					<li class="footer-menu__item">
+						<a href="#" class="footer-menu__link">Product</a>
+					</li>
+					<li class="footer-menu__item">
+						<a href="#" class="footer-menu__link">Pricing Plans</a>
+					</li>
+					<li class="footer-menu__item">
+						<a href="#" class="footer-menu__link">FAQ</a>
+					</li>
+					<li class="footer-menu__item">
+						<a href="#" class="footer-menu__link">Blog</a>
+					</li>
+				</ul>
+				<div class="footer-menu__links">
+					<a href="#">
+						<img
+							width="10"
+							height="20"
+							src="./assets/icons/Facebook.svg"
+							alt="facebook"
+						/>
+					</a>
+					<a href="#">
+						<img
+							width="25"
+							height="20"
+							src="./assets/icons/Twitter.svg"
+							alt="twitter"
+						/>
+					</a>
+					<a href="#">
+						<img
+							width="21"
+							height="20"
+							src="./assets/icons/Instagram.svg"
+							alt="instagram"
+						/>
+					</a>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
